--- a/README.Rmd
+++ b/README.Rmd
@@ -17,7 +17,7 @@ Installation of `sparcc` from GitHub requires the [`devtools`](https://www.r-pro
 ```{r, eval = F}
 
 # install the package
-devtools::install_github(repo = "brian-d-richardson/sparcc", 
+devtools::install_github(repo = "anonymous-272/sparcc", 
                          ref = "main")
 
 ```
